layout changes for the forum startpage: the categories, continents and tags are now in three containers of the same size to avoid breaking on IE6 and to have more space for the categories. changed also the teaser (block elements inside inline elements are böse, böse ;)
git-svn-id: file:///home/jaliste/hcvol/hcvol/trunk@3694 4f49b16c-3c57-40ef-8e22-7452baa6c33a

--- a/htdocs/styles/YAML/screen/custom/forums.css
+++ b/htdocs/styles/YAML/screen/custom/forums.css
@@ -1,78 +1,78 @@
 /* Thread view */
 div.forumspost { 
-	border-top: 1px solid #e5e5e5;
-	border-bottom: 1px solid #f5f5f5;
-  border-right: 1px solid #e5e5e5;
-  border-left: 1px solid #e5e5e5;
-	width:100%; 
-	position:relative; 
-	overflow:hidden;
-	padding:5px;
-	float:right; 
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #f5f5f5;
+    border-right: 1px solid #e5e5e5;
+    border-left: 1px solid #e5e5e5;
+    width:100%; 
+    position:relative; 
+    overflow:hidden;
+    padding:5px;
+    float:right; 
 } 
 div.forumsavatar {
-	position:relative;
-	margin:.5em auto;
+    position:relative;
+    margin:.5em auto;
 }
 div.forumsavatar img {
-  max-width:64px;
-  max-height:64px;
+    max-width:64px;
+    max-height:64px;
 }
 div.forumsauthorname {
-	font-weight: bold;
-	font-size: 1.1em;
+    font-weight: bold;
+    font-size: 1.1em;
 }
 div.forumsauthor {
-	padding:1em 0 0 0;
-	width:13%;
-	float:left;
-	text-align:center;
+    padding:1em 0 0 0;
+    width:13%;
+    float:left;
+    text-align:center;
 }
 div.forumsmessage {
-	padding:0 0 5px 0;
-	float:right; 
-	width:82%; 
-	position:relative;
+    padding:0 0 5px 0;
+    float:right; 
+    width:85%; 
+    position:relative;
 }
 div.forumsmessage ul{
-	list-style-type: disc;
+    list-style-type: disc;
     margin: 5px 10px;
 }
 div.forumsmessage li{
-	list-style-type: disc;
+    list-style-type: disc;
     margin: 5px 3px;
 }
 p.forumstime {
-	font-size: 11px;
-	color:#888;
+    font-size: 11px;
+    color:#888;
 }
 div#forumsthreadreplytop {
-	width:100%;
-	text-align:right;
-  margin-bottom: 0.5em;
+    width:100%;
+    text-align:right;
+    margin-bottom: 0.5em;
 }
 div#forumsthreadreplybottom {
-	width:100%;
-	text-align:right;
-  margin-top: 0.5em;
+    width:100%;
+    text-align:right;
+    margin-top: 0.5em;
 }
 
 
 /* Board View */
 table.forumsboardthreads {
-	width:100%;
+    width:100%;
 }
 td.forumsboardthreadtitle {
-	font-weight: bold;
-	width: 60%;
+    font-weight: bold;
+    width: 60%;
 }
 td.forumsboardthreadreplies {
-	font-size: 1em;
-	text-align: center;
+    font-size: 1em;
+    text-align: center;
 }
 td.forumsboardthreadauthor {
-	font-size: 1em;
-	text-align: center;
+    font-size: 1em;
+    text-align: center;
 }
 td.forumsboardthreadviews {
 	font-size: 1em;
@@ -90,7 +90,7 @@ div#forumsboardselect {
 span.forumsboardthreadtags {
 	font-size: 11px;
 	font-weight: bold;
-  color: #333;
+    color: #333;
 }
 span.forumsboardnavichain {
 	font-size: 11px;
@@ -98,11 +98,11 @@ span.forumsboardnavichain {
 	color: #888888;
 }
 div#boardnewtopictop {
-	width: 100%;
-  text-align: right;
-  font-weight: bold;
-	margin-bottom: 10px;
-	margin-top: 0px;
+    width: 100%;
+    text-align: right;
+    font-weight: bold;
+    margin-bottom: 10px;
+    margin-top: 0px;
 }
 div#boardnewtopicbottom {
 	width: 100%;
@@ -190,10 +190,10 @@ span.forums_tag_description {
 	margin: 0;
 	margin-bottom: 10px;
 }
-.category { width: 25%; margin-right: 15px;	}
+.category { margin-right: 15px;	}
 .category h4 img{
 	margin: 5px;
-    border: none;
+  border: none;
 }
 .category ul li {
 	line-height: 1em;
@@ -208,7 +208,7 @@ span.forums_tag_description {
 	margin:10px 0;
 	line-height: 1.2em;	
 }
-.region { width: 25%; margin-right: 15px; }
+.region { margin-right: 15px; }
 .region h4 img{
 
 	margin: 5px;
@@ -218,6 +218,7 @@ span.forums_tag_description {
 line-height: 1em;
 margin: 0 5px 5px 5px 0;
 padding-bottom: 5px;
+padding-top: 0;
 }
 .region ul a {
 	font-weight: bold;
@@ -235,62 +236,61 @@ table.row td {
 	margin-bottom: 15px;
 	
 }
-.tags { width: 43%; }
+.tags { }
 .tags h4 img{
-	margin: 5px;
+    margin: 5px;
     border: none;
 }
 .tags a {
-	font-size: 11px;
-  color: #888;
+    font-size: 11px;
+    color: #888;
 }
 .tags a:hover {
-	font-weight: normal;
-  color: #333;
-  background: transparent;
-  text-decoration: underline;
+    font-weight: normal;
+    color: #333;
+    background: transparent;
+    text-decoration: underline;
 }
 
 
 #forum h4 {  
-  margin-bottom: 0.5em ;
-  padding-top: 0.5em;
+    margin-bottom: 0.5em ;
+    padding-top: 0.5em;
 }
 
 #forumsform {
-  padding-left: 1px;
+    padding-left: 1px;
 }  
 
 /* Highlighting in forums view */
 #main div.forumspost.highlight {
-	background: #f5f5f5 url(../images/cell_bg.jpg) repeat-x;
-	border: none;
-	border-top: 1px solid #e5e5e5;
-	border-bottom: 1px solid #e5e5e5;	
-	margin-right: 0px;
+    background: #f5f5f5 url(../images/cell_bg.jpg) repeat-x;
+    border: none;
+    border-top: 1px solid #e5e5e5;
+    border-bottom: 1px solid #e5e5e5;	
+    margin-right: 0px;
 }
 #main div.forumspost.blank {
-	background: #fff none;
-	border: none;
-	margin-right: 0px;
+    background: #fff none;
+    border: none;
+    margin-right: 0px;
 }
 
 /* Forums Icons */
 #main h4.ficon2 {
-	margin-right: 60px;
+    margin-right: 60px;
     background: url(../images/forums_icons2.gif);
-	border: none;
+    border: none;
 }
 #main h4.ficon3 {
-	margin-right: 60px;
+    margin-right: 60px;
     background: url(../images/forums_icons3.gif);
-	border: none;
+    border: none;
 }
+
+
 
 img.forum_icon, #main h4 img.forum_icon {
 margin: 0 4px;
 float:left;
-}
-img.forum_icon {
-margin: 3px 5px;
 }
